--- a/index.html
+++ b/index.html
@@ -1513,35 +1513,25 @@ const DEFAULT_TICKERS = {
   1: [
     { sym: "NVDA", name: "NVIDIA" },
     { sym: "TSM", name: "Taiwan Semi" },
-    { sym: "ANET", name: "Arista Networks" },
-    { sym: "VST", name: "Vistra Energy" },
-    { sym: "CEG", name: "Constellation Energy" },
-    { sym: "EQIX", name: "Equinix" },
-    { sym: "AMT", name: "American Tower" },
+    { sym: "LITE", name: "Lumentum" },
+    { sym: "MU", name: "Micron Technology" },
+    { sym: "SNDK", name: "SanDisk" },
+    { sym: "ORCL", name: "Oracle" },
+    { sym: "SATS", name: "EchoStar (SpaceX)" },
   ],
   2: [
-    { sym: "SNOW", name: "Snowflake" },
-    { sym: "PLTR", name: "Palantir" },
-    { sym: "MSCI", name: "MSCI Inc" },
-    { sym: "VRSK", name: "Verisk Analytics" },
-    { sym: "ICE", name: "Intercontinental Exch" },
     { sym: "GOOG", name: "Alphabet" },
-    { sym: "TTD", name: "The Trade Desk" },
+    { sym: "ORCL", name: "Oracle" },
   ],
   3: [
     { sym: "AMZN", name: "Amazon" },
     { sym: "META", name: "Meta Platforms" },
-    { sym: "SHOP", name: "Shopify" },
-    { sym: "NFLX", name: "Netflix" },
-    { sym: "SPOT", name: "Spotify" },
-    { sym: "UBER", name: "Uber" },
-    { sym: "ABNB", name: "Airbnb" },
   ],
   4: [
     { sym: "CRM", name: "Salesforce" },
     { sym: "ADBE", name: "Adobe" },
     { sym: "NOW", name: "ServiceNow" },
-    { sym: "WDAY", name: "Workday" },
+    { sym: "SNOW", name: "Snowflake" },
     { sym: "HUBS", name: "HubSpot" },
     { sym: "INFY", name: "Infosys" },
     { sym: "WIT", name: "Wipro" },
